# Pre-Industry-Program

./: .gitignore  pyproject.toml
Django/: Custom Error forms.md  readme.md
Python/: Unpacking.md  dictionary-like object.md
Task 01/ERD/: draw.md  readme.md
Task 01/Normalization/: readme.md
Task-02/: django.md  readme.md
Task-03/: README.md  pyproject.toml
Task-03/mysite/: settings.py  urls.py
Task-03/template/: addmeal.html  allmeal.html  base.html  form.html  index.html
Task-03/todo/: admin.py  forms.py  models.py  urls.py  views.py
Task-03/todo/migrations/: 0001_initial.py  0002_task_status.py  0003_alter_task_status.py  0004_task_description.py  0005_meal_delete_task.py  0006_alter_meal_created.py
accounts/: serializers.py  urls.py  views.py
core/: settings.py  urls.py
meal-front/: Meal Management API.yaml  index.html  package-lock.json  package.json
meal-front/src/: App.tsx  index.css
meal-front/src/pages/: Costs.tsx  (+8 more)
meal_manage/: admin.py  apps.py  models.py  models_backup.py  serializers.py  urls.py
meal_manage/migrations/: 0001_initial.py  0002_remove_messmember_role_mess_manager_and_more.py  0003_messmember_status_alter_mess_manager.py  0004_alter_messmember_status.py  0005_alter_messmember_unique_together.py  0006_deposit.py  0007_dailymeal.py  0008_alter_mess_options_alter_messmember_options_cost.py
meal_manage/serializers/: serializers_cost.py  serializers_deposit.py  serializers_meal.py  serializers_mess_member.py
meal_manage/views/: cost.py  deposit.py  meal.py  member_activity.py  mess_member.py  reset.py  user.py
(+3 files in other folders)
